# FlexHAL

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  library.json  library.properties  platformio.ini
.cascade/: settings.json
.github/workflows/: build-test.yml  clang-format-check.yml
docs/: ARCHITECTURE.md  CODING_STYLE.md  requirements.md
docs/examples/: spi_example.md
docs/spec/: architecture.md  code_examples.md  gpio_design.md  interfaces.md  requirements.md  roadmap.md
examples/arduino_esp32_blink/: arduino_esp32_blink.ino  platformio.ini
examples/arduino_esp32_blink/.pio/libdeps/esp32dev/: FlexHAL.pio-link
examples/arduino_esp32_blink/src/: main.cpp
examples/gpio_blink/: gpio_blink.ino  main.cpp  platformio.ini
examples/gpio_blink/.pio/libdeps/esp32dev/: FlexHAL.pio-link
examples/gpio_blink/src/: main.cpp
examples/scripts/: sdl2_config.py
examples/simple_test/: platformio.ini  simple_test.ino
examples/simple_test/src/: main.cpp
impl/: FlexHAL_Impl.hpp
impl/frameworks/arduino/: gpio.hpp  gpio.inl  logger.hpp  logger.inl
impl/frameworks/espidf/esp32/: gpio.hpp  gpio.inl
impl/frameworks/sdl/: impl_includes.h  window.cpp  window.hpp  window.inl
impl/internal/: core.h  device.h  gpio.h  i2c.h  mutex.h  pin.h  platform_detect.h  spi.h  task.h  transport.h  version.h
impl/rtos/freertos/: factory.cpp  factory.inl  impl_includes.h  mutex.h  task.h
impl/rtos/noos/: impl_includes.h  mutex.h  task.h
impl/rtos/sdl/: impl_includes.h  mutex.h  task.h  time.inl
include/flexhal/: display.hpp  gpio.hpp  system.hpp
src/: FlexHAL.cpp  FlexHAL.h  FlexHAL.hpp  FlexHAL_Impl.cpp
src/flexhal/: core.cpp  core.hpp  framework.cpp  framework.hpp  gpio.hpp  i2c.hpp  logger.cpp  logger.hpp  platform.cpp  platform.hpp  platform_detect.h  rtos.cpp  rtos.hpp  spi.hpp
src/flexhal/gpio/: _include.h  digital.h  factory.h  gpio.h
src/flexhal/logger/: _include.h  logger.h
src/flexhal/time/: _include.h  delay.h  timer.h
tests/logger_test/: build.sh
tests/logger_test/src/: main.cpp
